# googleurl

./: CMakeLists.txt  README.md  build_config.bzl  copy.bara.sky
base/: BUILD  bits.h  compiler_specific.h  cxx17_backports.h  cxx20_to_address.h  optional.h  stl_util.h  template_util.h
base/containers/: checked_iterators.h  contains.h  contiguous_iterator.h  span.h
base/debug/: crash_logging.cc  crash_logging.h
base/memory/: raw_ptr.h  raw_ptr_exclusion.h
base/numerics/: checked_math.h  clamped_math_impl.h  safe_conversions.h  safe_conversions_impl.h
base/ranges/: algorithm.h
base/strings/: BUILD  abseil_string_number_conversions.cc  abseil_string_number_conversions.h  abseil_string_number_conversions_unittest.cc  char_traits.h  escape.cc  escape.h  escape_unittest.cc  pattern.cc  safe_sprintf.cc  safe_sprintf.h  safe_sprintf_unittest.cc  strcat.cc  strcat.h  strcat_unittest.cc  string16.cc  string16.h  string16_unittest.cc  string_number_conversions.cc  string_number_conversions.h  string_number_conversions_internal.h  string_number_conversions_unittest.cc  string_number_conversions_win.cc  string_piece.cc  string_piece.h  string_piece_forward.h  string_piece_rust.h  string_piece_rust_unittest.cc  string_piece_unittest.cc  string_split.cc  string_split.h  string_split_unittest.cc  string_tokenizer.h  string_util.cc  string_util.h  string_util_constants.cc  string_util_impl_helpers.h  string_util_internal.h  string_util_posix.h  string_util_unittest.cc  (+23 more)
build_config/: build_config.bzl
cmake/: abseil-cpp.cmake  double-conversion.cmake
polyfills/: BUILD
polyfills/base/: check.h  feature_list.h  logging.h
test/: BUILD
url/: BUILD  gurl.cc  gurl.h  gurl_fuzzer.cc  gurl_unittest.cc  origin.cc  origin.h  origin_abstract_tests.h  origin_unittest.cc  scheme_host_port.cc  scheme_host_port.h  scheme_host_port_unittest.cc  url_canon.h  url_canon_etc.cc  url_canon_filesystemurl.cc  url_canon_fileurl.cc  url_canon_host.cc  url_canon_icu.cc  url_canon_icu_unittest.cc  url_canon_internal.cc  url_canon_internal.h  url_canon_ip.cc  url_canon_ip.h  url_canon_path.cc  url_canon_query.cc  url_canon_relative.cc  url_canon_stdstring.h  url_canon_stdurl.cc  url_canon_unittest.cc  url_constants.h  url_features.cc  url_features.h  url_idna_ascii_only.cc  url_idna_icu.cc  url_parse_file.cc  url_util.cc  url_util.h  url_util_unittest.cc
